elixir/force-app/main/default/objects/Account/fields/ACL__c.field-meta.xml
<CustomField>
    <fullName>ACL__c</fullName>
    <label>ACL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>