elixir/force-app/main/default/objects/Account/fields/ACR__c.field-meta.xml
<CustomField>
    <fullName>ACR__c</fullName>
    <label>ACR #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>