elixir/force-app/main/default/objects/Account/fields/Admin_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Account_Name__c</fullName>
    <label>Admin Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>