elixir/force-app/main/default/objects/Account/fields/Billing_Address_Street_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Street_No__c</fullName>
    <label>Billing Address Street No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>