elixir/force-app/main/default/objects/Account/fields/Billing_Address_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Street_Type__c</fullName>
    <label>Billing Address Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Street_Type</valueSetName>
    </valueSet>
</CustomField>