elixir/force-app/main/default/objects/Account/fields/Billing_Address_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Unit_No__c</fullName>
    <label>Billing Address Unit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>