elixir/force-app/main/default/objects/Account/fields/Broker_ACL_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_ACL_Number__c</fullName>
    <label>Broker ACL Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>