elixir/force-app/main/default/objects/Account/fields/Broker_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Membership_Type__c</fullName>
    <label>Broker Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAFBA</fullName>
            </value>
            <value>
                <fullName>MFAA</fullName>
            </value>
            <value>
                <fullName>FBAA</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>