elixir/force-app/main/default/objects/Account/fields/Brokers_BDM__c.field-meta.xml
<CustomField>
    <fullName>Brokers_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokers BDM</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>