elixir/force-app/main/default/objects/Account/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>