elixir/force-app/main/default/objects/Account/fields/clcommon__Auto_Apply_Cash_Receipts__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Auto_Apply_Cash_Receipts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, cash receipts will  be auto applied</description>
    <inlineHelpText>If checked, cash receipts will  be auto applied</inlineHelpText>
    <label>Auto Apply Cash Receipts</label>
    <type>Checkbox</type>
</CustomField>