elixir/force-app/main/default/objects/Account/fields/clcommon__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to define the working hours and holidays for the account.</description>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>