elixir/force-app/main/default/objects/Account/fields/clcommon__Default_Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Default_Billing_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default bill group. Mandatory for invoice generation.</description>
    <inlineHelpText>The default bill group. Mandatory for invoice generation.</inlineHelpText>
    <label>Default Bill Group</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>clcommon__Billing_Group__c.clcommon__Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>clcommon__Billing_Group__c.clcommon__Account__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>clcommon__Billing_Group__c.clcommon__Contact__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clcommon__Billing_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>