elixir/force-app/main/default/objects/Account/fields/clcommon__Default_Payment_Spread__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Default_Payment_Spread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the payment spread used for allocating the cash-receipt-application amount to the dues selected for this borrower.</description>
    <inlineHelpText>The default payment spread</inlineHelpText>
    <label>Default Payment Spread</label>
    <referenceTo>clcommon__Payment_Spread__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>