elixir/force-app/main/default/objects/Account/fields/clcommon__Delinquency_Flag__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Delinquency_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delinquency Flag of Account</description>
    <inlineHelpText>To identify Delinquency Status of Account</inlineHelpText>
    <label>Delinquency Flag</label>
    <type>Checkbox</type>
</CustomField>