elixir/force-app/main/default/objects/Account/fields/clcommon__Direct_Exposure__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Direct_Exposure__c</fullName>
    <description>Total amount of credit extended to the borrower</description>
    <inlineHelpText>Total amount of credit extended to the borrower</inlineHelpText>
    <label>Direct Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>