elixir/force-app/main/default/objects/Account/fields/clcommon__Direct_Exposure_Relationship__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Direct_Exposure_Relationship__c</fullName>
    <description>Direct exposure of account considering all relationships</description>
    <inlineHelpText>Direct exposure of account considering all relationships</inlineHelpText>
    <label>Direct Exposure(Relationship)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>