elixir/force-app/main/default/objects/Account/fields/clcommon__Financial_Statement_Template__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Financial_Statement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected financial statement template for account</description>
    <inlineHelpText>Selected financial statement template for account</inlineHelpText>
    <label>Financial Statement Template</label>
    <referenceTo>clcommon__Financial_Statement_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>