elixir/force-app/main/default/objects/Account/fields/clcommon__Generate_Invoice_Letter__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Generate_Invoice_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if invoices to be generated for this Account</description>
    <inlineHelpText>Check if invoices to be generated for this Account</inlineHelpText>
    <label>Generate Invoice</label>
    <type>Checkbox</type>
</CustomField>