elixir/force-app/main/default/objects/Account/fields/clcommon__Indirect_Exposure_Relationship__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Indirect_Exposure_Relationship__c</fullName>
    <description>Indirect exposure of account considering all relationships</description>
    <inlineHelpText>Indirect exposure of account considering all relationships</inlineHelpText>
    <label>Indirect Exposure(Relationship)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>