elixir/force-app/main/default/objects/Account/fields/clcommon__Indirect_Proposed_Exposure__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Indirect_Proposed_Exposure__c</fullName>
    <description>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</description>
    <inlineHelpText>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</inlineHelpText>
    <label>Indirect Proposed Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>