elixir/force-app/main/default/objects/Account/fields/clcommon__Industry_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Industry_Classification_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Industry classification code for the account</description>
    <inlineHelpText>Industry classification code for the account</inlineHelpText>
    <label>Industry Classification Code</label>
    <referenceTo>clcommon__Industry_Classification_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>