elixir/force-app/main/default/objects/Account/fields/clcommon__Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Legal_Entity_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity Type</label>
    <referenceTo>clcommon__Legal_Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>