elixir/force-app/main/default/objects/Account/fields/Commision_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Commision_Account_Name__c</fullName>
    <label>Commision Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>