elixir/force-app/main/default/objects/Account/fields/Commision_Email__c.field-meta.xml
<CustomField>
    <fullName>Commision_Email__c</fullName>
    <label>Commision Email</label>
    <type>Email</type>
</CustomField>