elixir/force-app/main/default/objects/Account/fields/Commision_Status__c.field-meta.xml
<CustomField>
    <fullName>Commision_Status__c</fullName>
    <label>Commision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>