elixir/force-app/main/default/objects/Account/fields/Commission_Mandate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Mandate_Amount__c</fullName>
    <label>Commission Mandate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>