elixir/force-app/main/default/objects/Account/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <label>Commission Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trail Only</fullName>
            </value>
            <value>
                <fullName>Up Front Only</fullName>
            </value>
            <value>
                <fullName>Up Front Plus Trail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>