elixir/force-app/main/default/objects/Account/fields/Does_the_Broker_have_ACL__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Broker_have_ACL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the Broker have ACL</label>
    <type>Checkbox</type>
</CustomField>