elixir/force-app/main/default/objects/Account/fields/Enter_Correspondence_Address_Manually__c.field-meta.xml
<CustomField>
    <fullName>Enter_Correspondence_Address_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enter Correspondence Address Manually</label>
    <type>Checkbox</type>
</CustomField>