elixir/force-app/main/default/objects/Account/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <label>Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aged Pension</fullName>
            </value>
            <value>
                <fullName>Invalid Pension</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Allowance</fullName>
            </value>
            <value>
                <fullName>Sole Parent&#39;s Pension</fullName>
            </value>
            <value>
                <fullName>Widow&#39;s Pension</fullName>
            </value>
            <value>
                <fullName>Carer&#39;s Pension</fullName>
            </value>
            <value>
                <fullName>Service/Vetran&#39;s Pension</fullName>
            </value>
            <value>
                <fullName>Special Benefit</fullName>
            </value>
            <value>
                <fullName>Wife&#39;s Pension</fullName>
            </value>
            <value>
                <fullName>Non Profit Organisation</fullName>
            </value>
            <value>
                <fullName>Company Not Required to Lodge a Tax Return</fullName>
            </value>
            <value>
                <fullName>Non Resident (10%W/Tax to Apply)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>