elixir/force-app/main/default/objects/Account/fields/genesis__Business_Information__c.field-meta.xml
<CustomField>
    <fullName>genesis__Business_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Information</label>
    <referenceTo>genesis__Business_Information__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>