elixir/force-app/main/default/objects/Account/fields/genesis__Total_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Risk_Score__c</fullName>
    <label>Total Risk Score</label>
    <summarizedField>genesis__Account_Scorecard_Result__c.genesis__Weighted_Score__c</summarizedField>
    <summaryForeignKey>genesis__Account_Scorecard_Result__c.genesis__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>