elixir/force-app/main/default/objects/Account/fields/genesis__Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Titled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>