elixir/force-app/main/default/objects/Account/fields/GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered__c</fullName>
    <label>GST Registered</label>
    <type>Date</type>
</CustomField>