elixir/force-app/main/default/objects/Account/fields/I_do_not_wish_to_provide_a_TFN__c.field-meta.xml
<CustomField>
    <fullName>I_do_not_wish_to_provide_a_TFN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I do not wish to provide a TFN</label>
    <type>Checkbox</type>
</CustomField>