elixir/force-app/main/default/objects/Account/fields/I_want_to_set_Exemption__c.field-meta.xml
<CustomField>
    <fullName>I_want_to_set_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I want to set Exemption</label>
    <type>Checkbox</type>
</CustomField>