elixir/force-app/main/default/objects/Account/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Insurer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>