elixir/force-app/main/default/objects/Account/fields/ints__Yodlee_Password__c.field-meta.xml
<CustomField>
    <fullName>ints__Yodlee_Password__c</fullName>
    <description>Password for Yodlee Username.</description>
    <label>Yodlee_Password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>