elixir/force-app/main/default/objects/Account/fields/ints__Yodlee_Username__c.field-meta.xml
<CustomField>
    <fullName>ints__Yodlee_Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Username registered with Yodlee. This Username can have multiple bank accounts linked with Yodlee.</description>
    <label>Yodlee Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>