elixir/force-app/main/default/objects/Account/fields/Is_the_postal_address__c.field-meta.xml
<CustomField>
    <fullName>Is_the_postal_address__c</fullName>
    <label>Is this the postal address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>