elixir/force-app/main/default/objects/Account/fields/Is_this_the_trading_address__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_trading_address__c</fullName>
    <label>Is this the trading address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>