elixir/force-app/main/default/objects/Account/fields/Last_Approved_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_Application_ID__c</fullName>
    <label>Last Approved Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>