elixir/force-app/main/default/objects/Account/fields/Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number__c</fullName>
    <label>Licence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>