elixir/force-app/main/default/objects/Account/fields/Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type__c</fullName>
    <label>Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACL</fullName>
            </value>
            <value>
                <fullName>ACR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>