elixir/force-app/main/default/objects/Account/fields/loan__Borrower__c.field-meta.xml
<CustomField>
    <fullName>loan__Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Borrower</label>
    <type>Checkbox</type>
</CustomField>