elixir/force-app/main/default/objects/Account/fields/loan__Broker__c.field-meta.xml
<CustomField>
    <fullName>loan__Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick, if the Account is a Broker.</inlineHelpText>
    <label>Broker</label>
    <type>Checkbox</type>
</CustomField>