elixir/force-app/main/default/objects/Account/fields/loan__Deployed_Funds__c.field-meta.xml
<CustomField>
    <fullName>loan__Deployed_Funds__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Stores the total buying price of all the invested loans.</description>
    <inlineHelpText>Stores the total buying price of all the invested loans.</inlineHelpText>
    <label>Total Buying Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>