elixir/force-app/main/default/objects/Account/fields/loan__Group__c.field-meta.xml
<CustomField>
    <fullName>loan__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group (DEPRECATED)</label>
    <referenceTo>loan__Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>